[gd_scene load_steps=22 format=2]

[ext_resource path="res://FarmNer/Levels/Level3.gd" type="Script" id=1]
[ext_resource path="res://FarmNer/Assets/Tileset/RocksPathTilesTileset.tres" type="TileSet" id=2]
[ext_resource path="res://FarmNer/Assets/Tileset/GravesAndRocksTileset.tres" type="TileSet" id=3]
[ext_resource path="res://FarmNer/Assets/Tileset/GrassTileset.tres" type="TileSet" id=4]
[ext_resource path="res://FarmNer/Assets/Tileset/RockTileset.tres" type="TileSet" id=5]
[ext_resource path="res://FarmNer/Assets/Torch/Torch.tscn" type="PackedScene" id=6]
[ext_resource path="res://FarmNer/Assets/Tileset/FencesTileset.tres" type="TileSet" id=7]
[ext_resource path="res://FarmNer/Assets/Chest/CursedChest.tscn" type="PackedScene" id=8]
[ext_resource path="res://FarmNer/Assets/TilesetScenes/TilesetGraveyard.png" type="Texture" id=9]
[ext_resource path="res://FarmNer/Assets/TheNasty/TheNasty.tscn" type="PackedScene" id=10]
[ext_resource path="res://FarmNer/Assets/Chest/Chest.tscn" type="PackedScene" id=11]
[ext_resource path="res://FarmNer/Assets/Textures/lightTexture.png" type="Texture" id=12]
[ext_resource path="res://FarmNer/Assets/Torch/Torch.gd" type="Script" id=13]

[sub_resource type="Environment" id=1]
background_mode = 4
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 9.92597, 11.9778, 10.0558, 14.1197, 5.96674, 13.9899, 6.03164, 11.7831 )

[sub_resource type="TileSet" id=3]
0/name = "1"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 8, 8 )
0/navigation_offset = Vector2( 8, 8 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "2"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 8, 8 )
1/navigation_offset = Vector2( 8, 8 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "3"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 8, 8 )
2/navigation_offset = Vector2( 8, 8 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "4"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 8, 8 )
3/navigation_offset = Vector2( 8, 8 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "5"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 8, 8 )
4/navigation_offset = Vector2( 8, 8 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 2 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
13/name = "14"
13/texture = ExtResource( 9 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 48, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 8, 8 )
13/navigation_offset = Vector2( 8, 8 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "15"
14/texture = ExtResource( 9 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 16, 48, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 8, 8 )
14/navigation_offset = Vector2( 8, 8 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "16"
15/texture = ExtResource( 9 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 32, 48, 16, 16 )
15/tile_mode = 0
15/occluder_offset = Vector2( 8, 8 )
15/navigation_offset = Vector2( 8, 8 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "17"
16/texture = ExtResource( 9 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 48, 48, 16, 16 )
16/tile_mode = 0
16/occluder_offset = Vector2( 8, 8 )
16/navigation_offset = Vector2( 8, 8 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
22/name = "TilesetGraveyard.png 22"
22/texture = ExtResource( 9 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 0, 0, 80, 80 )
22/tile_mode = 2
22/autotile/icon_coordinate = Vector2( 0, 0 )
22/autotile/tile_size = Vector2( 16, 16 )
22/autotile/spacing = 0
22/autotile/occluder_map = [  ]
22/autotile/navpoly_map = [  ]
22/autotile/priority_map = [  ]
22/autotile/z_index_map = [  ]
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.69661, 2.0805 )

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.13245, 1 )
colors = PoolColorArray( 0.123047, 0.123047, 0.123047, 1, 0.742188, 0.742188, 0.742188, 1 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.602649, 0.993378 )
colors = PoolColorArray( 0.968627, 0.803922, 0.0470588, 1, 0.988235, 0.639216, 0.027451, 1, 0.368627, 0.219608, 0.00784314, 1 )

[sub_resource type="RectangleShape2D" id=8]

[node name="Level3" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="."]
scale = Vector2( 1, 0.995415 )

[node name="CanvasModulate" type="CanvasModulate" parent="Level"]
color = Color( 0.0117647, 0, 0.027451, 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Level"]
environment = SubResource( 1 )

[node name="Background" type="ColorRect" parent="Level"]
margin_left = -72.0
margin_top = -153.0
margin_right = 1272.0
margin_bottom = 547.0
mouse_filter = 2
color = Color( 0.392157, 0.513726, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" type="Node2D" parent="."]

[node name="Rocks" type="TileMap" parent="Tiles"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65564, 2, 0, 65565, 2, 1, 65566, 2, 2, 131099, 2, 0, 131100, 2, 65537, 131101, 2, 65537, 131102, 2, 65537, 131103, 2, 2, 196635, 2, 65536, 196636, 2, 65537, 196637, 2, 65537, 196638, 2, 65537, 196639, 2, 65538, 196675, 2, 0, 196676, 2, 1, 196677, 2, 2, 262171, 2, 65536, 262172, 2, 65537, 262173, 2, 65537, 262174, 2, 131073, 262175, 2, 131074, 262211, 2, 65536, 262212, 2, 65537, 262213, 2, 65538, 327707, 2, 131072, 327708, 2, 131073, 327709, 2, 131074, 327746, 2, 0, 327747, 2, 65537, 327748, 2, 65537, 327749, 2, 65538, 393282, 2, 65536, 393283, 2, 65537, 393284, 2, 65537, 393285, 2, 131074, 458818, 2, 131072, 458819, 2, 131073, 458820, 2, 131074, 720937, 2, 0, 720938, 2, 2, 786472, 2, 0, 786473, 2, 65537, 786474, 2, 65537, 786475, 2, 1, 786476, 2, 2, 852007, 2, 0, 852008, 2, 65537, 852009, 2, 65537, 852010, 2, 65537, 852011, 2, 65537, 852012, 2, 65538, 917543, 2, 131072, 917544, 2, 65537, 917545, 2, 65537, 917546, 2, 65537, 917547, 2, 65537, 917548, 2, 65538, 983080, 2, 131072, 983081, 2, 65537, 983082, 2, 65537, 983083, 2, 65537, 983084, 2, 131074, 1048617, 2, 131072, 1048618, 2, 131073, 1048619, 2, 131074, 1179663, 2, 0, 1179664, 2, 1, 1179665, 2, 1, 1179666, 2, 2, 1245199, 2, 65536, 1245200, 2, 65537, 1245201, 2, 65537, 1245202, 2, 65537, 1245203, 2, 2, 1310735, 2, 131072, 1310736, 2, 65537, 1310737, 2, 65537, 1310738, 2, 131073, 1310739, 2, 131074, 1376272, 2, 131072, 1376273, 2, 131074 )

[node name="Grass" type="TileMap" parent="Tiles"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65550, 1, 0, 65551, 1, 3, 65572, 0, 0, 131085, 1, 0, 131086, 1, 65537, 131087, 1, 65539, 196621, 1, 131072, 196622, 1, 131074, 196623, 1, 131075, 1179680, 1, 0, 1179681, 1, 2, 1179682, 1, 1, 1179683, 1, 3, 1245215, 1, 0, 1245216, 1, 65538, 1245217, 1, 65538, 1245218, 1, 65538, 1245219, 1, 65539, 1310750, 1, 0, 1310751, 1, 65538, 1310752, 1, 65538, 1310753, 1, 65538, 1310754, 1, 65538, 1310755, 1, 65539, 1376285, 1, 0, 1376286, 1, 65538, 1376287, 1, 65538, 1376288, 1, 65538, 1376289, 1, 65538, 1376290, 1, 65538, 1376291, 1, 65537, 1376292, 1, 3, 1441821, 1, 131072, 1441822, 1, 65538, 1441823, 1, 65537, 1441824, 1, 131073, 1441825, 1, 131074, 1441826, 1, 131073, 1441827, 1, 131074, 1441828, 1, 131075, 1441851, 1, 0, 1441852, 1, 1, 1441853, 1, 3, 1507358, 1, 131072, 1507359, 1, 131075, 1507387, 1, 131072, 1507388, 1, 65537, 1507389, 1, 65538, 1507390, 1, 1, 1507391, 1, 1, 1507392, 1, 3, 1572912, 1610612736, 0, 1572924, 1, 131072, 1572925, 1, 65538, 1572926, 1, 65538, 1572927, 1, 65538, 1572928, 1, 65538, 1572929, 1, 2, 1572930, 1, 3, 1638461, 1, 65536, 1638462, 1, 65538, 1638463, 1, 65538, 1638464, 1, 65538, 1638465, 1, 65537, 1638466, 1, 131075, 1703997, 1, 131072, 1703998, 1, 131074, 1703999, 1, 131074, 1704000, 1, 131073, 1704001, 1, 131075 )

[node name="Roads" type="TileMap" parent="Tiles"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -851911, -1610612727, 131072, -786377, -1610612727, 131073, -786376, -1610612727, 131073, -786375, -1610612727, 65536, -720841, -1610612727, 1, -720840, -1610612727, 65537, -720839, -1610612727, 65537, -655305, -1610612727, 1, -655304, -1610612727, 131074, -655303, -1610612727, 131073, -589770, -1610612727, 131074, -589769, -1610612727, 0, -589768, -1610612727, 65538, -524235, -1610612727, 65537, -524234, -1610612727, 131073, -524233, -1610612727, 65537, -524232, -1610612727, 65538, -458699, -1610612727, 131073, -458698, -1610612727, 131073, -458697, -1610612727, 2, -393164, -1610612727, 65536, -393163, -1610612727, 65536, -393162, -1610612727, 0, -393161, -1610612727, 65538, -327628, -1610612727, 65537, -327627, -1610612727, 131073, -327626, -1610612727, 65538, -262092, -1610612727, 65536, -262091, -1610612727, 65538, -262090, -1610612727, 0, -196557, -1610612727, 0, -196556, -1610612727, 131073, -196555, -1610612727, 65538, -131021, -1610612727, 1, -131020, -1610612727, 131074, -131019, -1610612727, 65536, -65485, -1610612727, 1, -65484, -1610612727, 1, -65483, -1610612727, 65536, 50, -1610612727, 131072, 51, -1610612727, 131073, 52, -1610612727, 0, 131067, -1610612727, 131072, 131068, -1610612727, 2, 65585, -1610612727, 1, 65586, -1610612727, 131072, 65587, -1610612727, 65538, 65588, -1610612727, 131073, 196601, -1610612727, 65536, 196602, -1610612727, 65536, 196603, -1610612727, 131072, 196604, -1610612727, 1, 196605, -1610612727, 131073, 196606, -1610612727, 131073, 196607, -1610612727, 131072, 131120, -1610612727, 2, 131121, -1610612727, 131074, 131122, -1610612727, 131072, 131123, -1610612727, 131073, 262138, -1610612727, 65537, 262139, -1610612727, 131072, 262140, -1610612727, 65536, 262141, -1610612727, 65537, 262142, -1610612727, 131072, 262143, -1610612727, 65537, 196608, -1610612727, 2, 196609, -1610612727, 65538, 196610, -1610612727, 1, 196611, -1610612727, 131073, 196656, -1610612727, 131073, 196657, -1610612727, 131074, 196658, -1610612727, 65538, 196659, -1610612727, 131072, 327676, -1610612727, 1, 327677, -1610612727, 0, 327678, -1610612727, 0, 327679, -1610612727, 131072, 262144, -1610612727, 1, 262145, -1610612727, 2, 262146, -1610612727, 2, 262147, -1610612727, 1, 262148, -1610612727, 0, 262149, -1610612727, 65537, 262150, -1610612727, 131074, 262151, -1610612727, 2, 262152, -1610612727, 65538, 262191, -1610612727, 1, 262192, -1610612727, 0, 262193, -1610612727, 131072, 262194, -1610612727, 65538, 393214, -1610612727, 2, 393215, -1610612727, 65536, 327680, -1610612727, 2, 327681, -1610612727, 0, 327682, -1610612727, 65537, 327683, -1610612727, 65537, 327684, -1610612727, 131073, 327685, -1610612727, 131073, 327686, -1610612727, 131073, 327687, -1610612727, 1, 327688, -1610612727, 131072, 327689, -1610612727, 1, 327690, -1610612727, 2, 327691, -1610612727, 131073, 327692, -1610612727, 65538, 327725, -1610612727, 131074, 327726, -1610612727, 1, 327727, -1610612727, 65536, 327728, -1610612727, 1, 327729, -1610612727, 65538, 393219, -1610612727, 1, 393220, -1610612727, 65537, 393221, -1610612727, 2, 393222, -1610612727, 1, 393223, -1610612727, 131074, 393224, -1610612727, 131074, 393225, -1610612727, 131072, 393226, -1610612727, 0, 393227, -1610612727, 0, 393228, -1610612727, 65537, 393229, -1610612727, 131072, 393230, -1610612727, 65536, 393231, -1610612727, 131073, 393232, -1610612727, 65536, 393233, -1610612727, 65538, 393258, -1610612727, 2, 393259, -1610612727, 0, 393260, -1610612727, 131074, 393261, -1610612727, 2, 393262, -1610612727, 2, 393263, -1610612727, 65538, 393264, -1610612727, 131072, 393265, -1610612727, 131074, 458758, -1610612727, 65536, 458759, -1610612727, 1, 458760, -1610612727, 65536, 458761, -1610612727, 2, 458762, -1610612727, 0, 458763, -1610612727, 65537, 458764, -1610612727, 131072, 458765, -1610612727, 65536, 458766, -1610612727, 2, 458767, -1610612727, 2, 458768, -1610612727, 65537, 458769, -1610612727, 131074, 458770, -1610612727, 65538, 458771, -1610612727, 65537, 458772, -1610612727, 65538, 458773, -1610612727, 131072, 458774, -1610612727, 0, 458775, -1610612727, 2, 458789, -1610612727, 65536, 458790, -1610612727, 2, 458791, -1610612727, 131073, 458792, -1610612727, 1, 458793, -1610612727, 131073, 458794, -1610612727, 65536, 458795, -1610612727, 131072, 458796, -1610612727, 131072, 458797, -1610612727, 131073, 458798, -1610612727, 65537, 458799, -1610612727, 0, 458800, -1610612727, 65536, 458801, -1610612727, 1, 458802, -1610612727, 131074, 524299, -1610612727, 131074, 524300, -1610612727, 65538, 524301, -1610612727, 65538, 524302, -1610612727, 2, 524303, -1610612727, 65537, 524304, -1610612727, 0, 524305, -1610612727, 131072, 524306, -1610612727, 65538, 524307, -1610612727, 1, 524308, -1610612727, 131074, 524309, -1610612727, 2, 524310, -1610612727, 131072, 524311, -1610612727, 131074, 524312, -1610612727, 65536, 524313, -1610612727, 65538, 524314, -1610612727, 2, 524315, -1610612727, 1, 524316, -1610612727, 2, 524317, -1610612727, 131072, 524318, -1610612727, 65537, 524319, -1610612727, 65536, 524320, -1610612727, 131074, 524321, -1610612727, 0, 524322, -1610612727, 131072, 524323, -1610612727, 65536, 524324, -1610612727, 65536, 524325, -1610612727, 65537, 524326, -1610612727, 131072, 524327, -1610612727, 65538, 524328, -1610612727, 65537, 524329, -1610612727, 131072, 524330, -1610612727, 131074, 524331, -1610612727, 65538, 524332, -1610612727, 1, 524333, -1610612727, 0, 524334, -1610612727, 1, 524335, -1610612727, 1, 524336, -1610612727, 0, 524337, -1610612727, 65538, 524338, -1610612727, 1, 524339, -1610612727, 2, 524340, -1610612727, 65536, 524341, -1610612727, 0, 589844, -1610612727, 65537, 589845, -1610612727, 131073, 589846, -1610612727, 2, 589847, -1610612727, 65538, 589848, -1610612727, 131073, 589849, -1610612727, 131072, 589850, -1610612727, 1, 589851, -1610612727, 65536, 589852, -1610612727, 2, 589853, -1610612727, 131074, 589854, -1610612727, 2, 589855, -1610612727, 131072, 589856, -1610612727, 131073, 589857, -1610612727, 131074, 589858, -1610612727, 65538, 589859, -1610612727, 131072, 589860, -1610612727, 65538, 589861, -1610612727, 65536, 589862, -1610612727, 1, 589863, -1610612727, 65536, 589870, -1610612727, 2, 589871, -1610612727, 65536, 589872, -1610612727, 1, 589873, -1610612727, 131073, 589874, -1610612727, 131073, 589875, -1610612727, 1, 589876, -1610612727, 131072, 589877, -1610612727, 65537, 589878, -1610612727, 1, 655410, -1610612727, 2, 655411, -1610612727, 0, 655412, -1610612727, 1, 655413, -1610612727, 1, 655414, -1610612727, 131073, 655415, -1610612727, 2, 655416, -1610612727, 2, 655417, -1610612727, 65536, 720949, -1610612727, 65536, 720950, -1610612727, 65537, 720951, -1610612727, 131072, 720952, -1610612727, 131074, 720953, -1610612727, 131072, 720954, -1610612727, 65538, 720955, -1610612727, 65536, 786488, -1610612727, 65537, 786489, -1610612727, 131072, 786490, -1610612727, 131074, 786491, -1610612727, 2, 786492, -1610612727, 65536, 786493, -1610612727, 65538, 786494, -1610612727, 65537, 852027, -1610612727, 2, 852028, -1610612727, 1, 852029, -1610612727, 1, 852030, -1610612727, 131073, 852031, -1610612727, 131072, 852032, -1610612727, 65538, 852033, -1610612727, 131074, 917565, -1610612727, 65536, 917566, -1610612727, 1, 917567, -1610612727, 131074, 917568, -1610612727, 1, 917569, -1610612727, 2, 917570, -1610612727, 0, 917571, -1610612727, 131074, 917572, -1610612727, 131072, 983104, -1610612727, 65536, 983105, -1610612727, 65537, 983106, -1610612727, 65538, 983107, -1610612727, 2, 983108, -1610612727, 65538, 983109, -1610612727, 0, 983110, -1610612727, 65536, 983111, -1610612727, 2, 983112, -1610612727, 65536, 983113, -1610612727, 65536, 983114, -1610612727, 131072, 983115, -1610612727, 131073, 1048641, -1610612727, 65536, 1048642, -1610612727, 65537, 1048643, -1610612727, 2, 1048644, -1610612727, 1, 1048645, -1610612727, 0, 1048646, -1610612727, 131073, 1048647, -1610612727, 131073, 1048648, -1610612727, 65538, 1048649, -1610612727, 2, 1048650, -1610612727, 2, 1048651, -1610612727, 1, 1048652, -1610612727, 65538, 1048653, -1610612727, 131072, 1048654, -1610612727, 131073, 1048655, -1610612727, 131074, 1114179, -1610612727, 131072, 1114180, -1610612727, 65536, 1114181, -1610612727, 131074, 1114182, -1610612727, 131073, 1114183, -1610612727, 131074, 1114184, -1610612727, 1, 1114185, -1610612727, 65538, 1114189, -1610612727, 65538, 1114190, -1610612727, 131073, 1114191, -1610612727, 1 )

[node name="RockPieces" type="TileMap" parent="Tiles"]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( 524344, 14, 0, 524345, 0, 0, 589881, 2, 0, 589882, 0, 0, 589883, 2, 0, 655419, 14, 0, 655420, 0, 0, 655422, 1, 0, 786480, 22, 262148, 786481, 15, 0, 852018, 15, 0, 852019, 13, 0, 852021, 2, 0, 917559, 0, 0, 983096, 1, 0 )

[node name="Graves" type="TileMap" parent="Tiles"]
z_index = 2
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( -131049, 20, 0, 262175, 12, 0, 393275, 12, 0, 720913, 5, 0, 786442, 22, 65536, 851990, 6, 0, 917515, 22, 2, 983051, 22, 196608, 983056, 7, 0, 983067, 6, 0, 1048587, 22, 65539, 1048622, 4, 0, 1179659, 22, 65536, 1245195, 22, 65537, 1245235, 11, 0, 1310731, 22, 3, 1310790, 22, 0, 1376266, 22, 0, 1376326, 22, 196610, 1572879, 22, 2, 1572880, 22, 262144, 1572881, 22, 262147, 1572882, 22, 65539, 1572883, 22, 196611, 1572884, 22, 65536, 1572907, 22, 65536, 1572908, 22, 131075, 1572909, 22, 131076, 1572933, 22, 65540, 1638438, 22, 131076, 1638439, 22, 1, 1638440, 22, 65539, 1638441, 22, 2, 1638442, 22, 262148, 1638469, 22, 196608 )

[node name="Fence" type="TileMap" parent="Tiles"]
z_index = 2
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131084, 1, 0, 131085, 1, 1, 131086, 1, 1, 131087, 1, 1, 131088, 1, 1, 131089, 1, 1, 131090, 1, 1, 131091, 1, 1, 131092, 1, 1, 131093, 1, 1, 131094, 1, 1, 131095, 1, 1, 131096, 1, 1, 131097, 1, 1, 131098, 1, 1, 131099, 1, 1, 131100, 1, 1, 131101, 1, 1, 131102, 1, 1, 131103, 1, 1, 131104, 1, 1, 131105, 1, 1, 131106, 1, 1, 131107, 1, 1, 131108, 1, 1, 131109, 1, 1, 131110, 1, 1, 131111, 1, 1, 131112, 1, 1, 131113, 1, 1, 131114, 1, 1, 131115, 1, 1, 131116, 1, 1, 131117, 1, 1, 131118, 1, 1, 131119, 1, 1, 131120, 1, 4, 131124, 1, 0, 131125, 1, 1, 131126, 1, 1, 131127, 1, 1, 131128, 1, 1, 131129, 1, 1, 131130, 1, 1, 131131, 1, 1, 131132, 1, 1, 131133, 1, 1, 131134, 1, 1, 131135, 1, 1, 131136, 1, 1, 131137, 1, 1, 131138, 1, 1, 131139, 1, 1, 131140, 1, 4, 196620, -1073741823, 65539, 196676, -1610612735, 65539, 262156, -1073741823, 65539, 262212, -1610612735, 65539, 327692, -1073741823, 65539, 327748, -1610612735, 65539, 393284, -1610612735, 65539, 458820, -1610612735, 65539, 524356, -1610612735, 65539, 589836, -1073741823, 65539, 589892, -1610612735, 65539, 655372, -1073741823, 65539, 655428, -1610612735, 65539, 720908, -1073741823, 65539, 720964, -1610612735, 65539, 786444, -1073741823, 65539, 786500, -1610612735, 65539, 851980, -1073741823, 65539, 852036, -1610612735, 65539, 917516, -1073741823, 65539, 983052, -1073741823, 65539, 1048588, -1073741823, 65539, 1114124, -1073741823, 65539, 1179660, -1073741823, 65539, 1179716, -1610612735, 65539, 1245196, -1073741823, 65539, 1245252, -1610612735, 65539, 1310732, -1073741823, 65539, 1310788, -1610612735, 65539, 1376268, -1073741823, 65539, 1376324, -1610612735, 65539, 1441804, -1073741823, 65539, 1441860, -1610612735, 65539, 1507340, 1, 0, 1507341, 1, 1, 1507342, 1, 1, 1507343, 1, 1, 1507344, 1, 1, 1507345, 1, 1, 1507346, 1, 1, 1507347, 1, 1, 1507348, 1, 1, 1507349, 1, 1, 1507350, 1, 1, 1507351, 1, 1, 1507352, 1, 1, 1507353, 1, 1, 1507354, 1, 1, 1507355, 1, 1, 1507356, 1, 1, 1507357, 1, 1, 1507358, 1, 1, 1507359, 1, 1, 1507360, 1, 1, 1507361, 1, 1, 1507362, 1, 1, 1507363, 1, 1, 1507364, 1, 1, 1507365, 1, 1, 1507366, 1, 1, 1507367, 1, 1, 1507368, 1, 1, 1507369, 1, 1, 1507370, 1, 1, 1507371, 1, 1, 1507372, 1, 1, 1507373, 1, 1, 1507374, 1, 1, 1507375, 1, 1, 1507376, 1, 1, 1507377, 1, 1, 1507378, 1, 1, 1507379, 1, 1, 1507380, 1, 1, 1507381, 1, 1, 1507382, 1, 1, 1507383, 1, 1, 1507384, 1, 1, 1507385, 1, 1, 1507386, 1, 1, 1507387, 1, 1, 1507388, 1, 1, 1507389, 1, 1, 1507390, 1, 1, 1507391, 1, 1, 1507392, 1, 1, 1507393, 1, 1, 1507394, 1, 1, 1507395, 1, 1, 1507396, 1, 4 )

[node name="Lighting" type="Node2D" parent="."]
z_index = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Torch" parent="Lighting" instance=ExtResource( 6 )]
position = Vector2( 824, -168 )

[node name="Torch2" parent="Lighting" instance=ExtResource( 6 )]
position = Vector2( 920, -104 )

[node name="Torch3" parent="Lighting" instance=ExtResource( 6 )]
position = Vector2( 779.392, -51.0844 )

[node name="Torch4" parent="Lighting" instance=ExtResource( 6 )]
position = Vector2( 851.262, 56 )

[node name="Torch5" parent="Lighting" instance=ExtResource( 6 )]
position = Vector2( 728, 74.4001 )

[node name="Torch6" type="Node2D" parent="Lighting"]
position = Vector2( 528.69, 79.3158 )
script = ExtResource( 13 )

[node name="StaticBody2D" type="StaticBody2D" parent="Lighting/Torch6"]
position = Vector2( -0.975626, 4.91565 )
scale = Vector2( 0.720002, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lighting/Torch6/StaticBody2D"]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="Lighting/Torch6"]
position = Vector2( 0.178722, -0.0672455 )
scale = Vector2( 0.485404, -0.0617473 )
collision_layer = 262144
collision_mask = 262144

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lighting/Torch6/Area2D"]
position = Vector2( -0.0758514, 1.27417 )
scale = Vector2( 22.7495, 99.0502 )
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="Lighting/Torch6"]
repeat = true
playback/repeat = true

[node name="Sprite" type="Sprite" parent="Lighting/Torch6"]
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 32, 64, 16, 16 )

[node name="Light2D" type="Light2D" parent="Lighting/Torch6"]
position = Vector2( -4.76837e-07, 1.90735e-06 )
scale = Vector2( 0.266097, 0.134177 )
texture = ExtResource( 12 )
texture_scale = 2.04
color = Color( 0.447059, 0.054902, 0.054902, 1 )
energy = 1.15

[node name="Light2D2" type="Light2D" parent="Lighting/Torch6"]
position = Vector2( -0.987931, 4.99173 )
scale = Vector2( 0.0637251, 0.0321328 )
texture = ExtResource( 12 )
texture_scale = 2.04
color = Color( 0.27451, 0.0313726, 0.0313726, 1 )
energy = 1.15

[node name="SmokeParticle" type="CPUParticles2D" parent="Lighting/Torch6"]
position = Vector2( -0.905588, -6.3028 )
rotation = 3.14159
amount = 4
lifetime = 0.8
speed_scale = 0.3
explosiveness = 0.61
emission_shape = 1
emission_sphere_radius = 2.0
angular_velocity = 464.52
linear_accel = 6.45
color_ramp = SubResource( 6 )

[node name="FireParticle" type="CPUParticles2D" parent="Lighting/Torch6"]
position = Vector2( -1.12303, -3.11386 )
rotation = 3.11216
lifetime = 0.6
speed_scale = 0.3
explosiveness = 0.56
randomness = 0.14
emission_shape = 1
emission_sphere_radius = 1.0
radial_accel = 15.22
color_ramp = SubResource( 7 )

[node name="BlackFadeZones" type="Node2D" parent="."]

[node name="Zone1" type="Area2D" parent="BlackFadeZones"]
position = Vector2( 1040.69, 248 )
collision_layer = 131072
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlackFadeZones/Zone1"]
position = Vector2( 57.525, 4.15701 )
scale = Vector2( 4.85258, 4.14327 )
shape = SubResource( 8 )

[node name="Zone2" type="Area2D" parent="BlackFadeZones"]
position = Vector2( 176, 128 )
scale = Vector2( 1.17262, 1.16204 )
collision_layer = 131072
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlackFadeZones/Zone2"]
position = Vector2( 0.513489, 0.774597 )
scale = Vector2( 4.85258, 4.14327 )
shape = SubResource( 8 )

[node name="Zone3" type="Area2D" parent="BlackFadeZones"]
position = Vector2( 814.024, 8 )
scale = Vector2( 1.17262, 1.16204 )
collision_layer = 131072
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlackFadeZones/Zone3"]
position = Vector2( 0.513489, 0.774597 )
scale = Vector2( 4.85258, 4.14327 )
shape = SubResource( 8 )

[node name="TheNasties" type="Node2D" parent="."]

[node name="TheNasty" parent="TheNasties" instance=ExtResource( 10 )]
position = Vector2( 576, 208 )

[node name="TheNasty2" parent="TheNasties" instance=ExtResource( 10 )]
position = Vector2( 360.188, 281.35 )

[node name="Chests" type="Node2D" parent="."]
z_index = 5

[node name="Chest" parent="Chests" instance=ExtResource( 11 )]
position = Vector2( 1024, 93.899 )

[node name="Chest2" parent="Chests" instance=ExtResource( 11 )]
position = Vector2( 883.392, 264 )

[node name="Chest4" parent="Chests" instance=ExtResource( 8 )]
modulate = Color( 0.803922, 0.466667, 0.466667, 1 )
position = Vector2( 512, 92.9157 )
[connection signal="tween_all_completed" from="Lighting/Torch6/Tween" to="Lighting/Torch6" method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="BlackFadeZones/Zone1" to="." method="_on_Zone1_body_entered"]
[connection signal="body_entered" from="BlackFadeZones/Zone2" to="." method="_on_Zone2_body_entered"]
[connection signal="body_entered" from="BlackFadeZones/Zone3" to="." method="_on_Zone3_body_entered"]
